[gd_scene load_steps=12 format=2]

[ext_resource path="res://Brick/Brick.gd" type="Script" id=1]
[ext_resource path="res://Assets/ballBlue.png" type="Texture" id=2]
[ext_resource path="res://Assets/card_spades_03.png" type="Texture" id=3]
[ext_resource path="res://Assets/card_hearts_J.png" type="Texture" id=4]
[ext_resource path="res://Assets/card_spades_05.png" type="Texture" id=5]
[ext_resource path="res://Assets/card_clubs_K.png" type="Texture" id=6]
[ext_resource path="res://Assets/card_hearts_04.png" type="Texture" id=7]
[ext_resource path="res://Assets/card_diamonds_06.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 45, 15 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0.00757575, 0.562917 ), 0.0, 0.0, 0, 0, Vector2( 0.636364, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0174621 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 0.996094, 0.984421, 0.984421, 1, 1, 1, 1, 0 )

[node name="Brick" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1.5, 2.5 )
shape = SubResource( 1 )

[node name="Confetti" type="CPUParticles2D" parent="."]
position = Vector2( 45, 15 )
emitting = false
amount = 15
lifetime = 0.4
one_shot = true
explosiveness = 0.5
texture = ExtResource( 2 )
emission_shape = 2
emission_rect_extents = Vector2( 45, 15 )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 300.0
initial_velocity_random = 1.0
scale_amount = 0.25
scale_amount_curve = SubResource( 2 )
color_ramp = SubResource( 3 )
hue_variation = 1.0
hue_variation_random = 1.0

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 72, 112 )
scale = Vector2( 1.5, 2.5 )
texture = ExtResource( 6 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
scale = Vector2( 1.5, 2.5 )
texture = ExtResource( 7 )

[node name="Sprite3" type="Sprite" parent="."]
visible = false
scale = Vector2( 1.5, 2.5 )
texture = ExtResource( 3 )

[node name="Sprite4" type="Sprite" parent="."]
visible = false
scale = Vector2( 1.5, 2.5 )
texture = ExtResource( 5 )

[node name="Sprite5" type="Sprite" parent="."]
visible = false
scale = Vector2( 1.5, 2.5 )
texture = ExtResource( 8 )

[node name="Sprite6" type="Sprite" parent="."]
visible = false
scale = Vector2( 1.5, 2.5 )
texture = ExtResource( 4 )

[node name="Tween" type="Tween" parent="."]
